--- a/presentations/04-Spatial_Data_Operations.html
+++ b/presentations/04-Spatial_Data_Operations.html
@@ -90,7 +90,7 @@ nrow(meuse[meuse$lead&gt;quantile(meuse$lead,.75),])
 
 --
 
-- `rgeos` / `gdistance` / `geosphere` / `maptools`:&lt;br/&gt;Contain many geometry and feature related operations.
+- `rgeos` / `gdistance` / `geosphere` / `maptools`:&lt;br/&gt;Packages contain many geometry and feature related operations.
 
 ---
 
