--- a/inst/index.html
+++ b/inst/index.html
@@ -12,7 +12,7 @@
 
 <meta name="author" content="Bhaskar V. Karambelkar" />
 
-<meta name="date" content="2017-06-27" />
+<meta name="date" content="2017-07-01" />
 
 <title>GeoSpatial Data Visualization in R</title>
 
@@ -32,7 +32,7 @@
 
 <h1 class="title toc-ignore">GeoSpatial Data Visualization in R</h1>
 <h4 class="author"><em>Bhaskar V. Karambelkar</em></h4>
-<h4 class="date"><em>2017-06-27</em></h4>
+<h4 class="date"><em>2017-07-01</em></h4>
 
 
 
@@ -47,22 +47,26 @@
 <li><p>Install <a href="https://store.docker.com/search?type=edition&amp;offering=community">docker</a>, and <a href="https://www.docker.com/products/docker-toolbox">docker toolbox</a> (only for Windows and Mac).</p></li>
 <li><p>Either using the kitematic GUI tool or command line pull the <code>bhaskarvk/rgeodataviz</code> image.<br />Command line: <code>docker pull bhaskarvk/rgeodataviz</code></p></li>
 </ul>
+<p>If docker is not an option <a href="https://gist.github.com/bhaskarvk/32b2a03a430a04a67664b85cad89c825">here</a> is a gist of all packages that are either directly or indirectly used for this tutorial.</p>
 </div>
 <div id="structure-of-the-tutorial" class="section level4">
 <h4>Structure of the Tutorial</h4>
 <p>This is going to be whirlwind tour of options for plotting spatial data using R. Instead of deep diving in to any one particular approach, the focus is going to be on gaining a broad understanding of many visualization techniques. You will be exposed to many R packages and tools and at times it may overwhelm you. But even then you will come out of this with a better understanding and appreciation of all the visualization options in R when it comes to spatial data.</p>
 <div id="part-1-introduction" class="section level5">
 <h5>Part 1: Introduction</h5>
+<p><strong><a href="presentations/01-Introduction.html">Slides</a></strong></p>
 <p><em>from</em> <strong>9:30 - 9:50</strong></p>
 <p>I will go over the objectives and the scope of the tutorial, introduce myself, get to know the audience a bit. We will also try and solve any last minute setup issues, in case someone has them.</p>
 </div>
 <div id="part-2-r-packages" class="section level5">
 <h5>Part 2: R Packages</h5>
+<p><strong><a href="presentations/02-R_Packages.html">Slides</a></strong></p>
 <p><em>from</em> <strong>9:50 - 10:05</strong></p>
 <p>In this part I will briefly go over some major R packages available for working with spatial data. We will cover R packages for data containers, reading/writing external data, spatial operations, and finally plotting spatial data.</p>
 </div>
 <div id="part-3-spatial-data" class="section level5">
 <h5>Part 3: Spatial Data</h5>
+<p><strong><a href="presentations/03-Spatial_Data.html">Slides</a></strong></p>
 <p><em>from</em> <strong>10:05 - 10:20</strong></p>
 <p>Here we will go over the major R packages for storing spatial data in an R environment. We will also explore briefly some common ways to interact with spatial data stored in files/databases.</p>
 </div>
@@ -71,11 +75,13 @@
 </div>
 <div id="part-4-spatial-data-operations" class="section level5">
 <h5>Part 4: Spatial Data Operations</h5>
+<p><strong><a href="presentations/04-Spatial_Data_Operations.html">Slides</a></strong></p>
 <p><em>from</em> <strong>10:25 - 10:40</strong></p>
 <p>Here we will explore some common spatial operations on data. This involves sub-setting, joining spatial data. Determining centroids, convex hulls, voronoi regions etc.</p>
 </div>
 <div id="part-5-ways-to-output-maps" class="section level5">
 <h5>Part 5: Ways to Output Maps</h5>
+<p><strong><a href="presentations/05-Ways_to_Output_Maps.html">Slides</a></strong></p>
 <p><em>from</em> <strong>10:40 - 11:00</strong></p>
 <p>In this section we will explore how to integrate maps in to your documents and applications. We will explore options for print maps in PDFs, to online and/or interactive maps in web pages. We will also explore dynamic mapping using Shiny.</p>
 </div>
@@ -84,6 +90,7 @@
 </div>
 <div id="part-6-static-maps" class="section level5">
 <h5>Part 6: Static Maps</h5>
+<p><strong><a href="presentations/06-Static_Maps.html">Slides</a></strong></p>
 <p><em>from</em> <strong>11:30 - 12:05</strong></p>
 <p>Maps that are put in documents, and web pages. Maps than can be printed out. We will explore various mapping techniques, but primarily focused on ggplot2 based techniques.</p>
 </div>
@@ -92,6 +99,7 @@
 </div>
 <div id="part-7-interactive-maps" class="section level5">
 <h5>Part 7: Interactive Maps</h5>
+<p><strong><a href="presentations/01-Interactive_Maps.html">Slides</a></strong></p>
 <p><em>from</em> <strong>12:10 - 12:50</strong></p>
 <p>Maps meant for the web. Maps that users can interact with and explore in more details. Maps that can be changed dynamically in a Shiny application on user interaction.</p>
 </div>
