--- a/inst/presentations/06-Static_Maps.html
+++ b/inst/presentations/06-Static_Maps.html
@@ -338,6 +338,11 @@ r &lt;- raster(system.file("external/test.grd", package="raster"))
 ---
 
 
+# Plotting with Ease-of-Use Pkgs: choroplethr
+
+---
+
+# Plotting with Ease-of-Use Pkgs: chorophethr
 
 ---
 
