--- a/presentations/01-Introduction.html
+++ b/presentations/01-Introduction.html
@@ -53,7 +53,7 @@ class: center, middle, inverse, title-slide
 
 --
 
-- Probably the least knowledgeable person in this room when it comes to GIS.
+- Day job is not GIS related, but it's a hobby that I take very seriously.
 
 --
 
@@ -69,7 +69,7 @@ class: center, middle, inverse, title-slide
 
 --
 
-- Made some contributions to the 'leaflet' package.
+- Contributor to the 'leaflet' package, and author of `leaflet.extras`/`leaflet.esri`/`tilegramsR`/`widgetframe` packages.
 
 --
 
