--- a/presentations/02-R_Packages.html
+++ b/presentations/02-R_Packages.html
@@ -23,6 +23,8 @@ class: center, middle, inverse, title-slide
 
 # Part2: R Packages
 
+- [CRAN Task View: Analysis of Spatial Data](https://CRAN.R-project.org/view=Spatial)
+
 --
 
 - Spatial Data Containers
@@ -104,6 +106,8 @@ class: center, middle, inverse, title-slide
 
 - [tigris](https://cran.r-project.org/package=tigris) / [tidycensus](https://cran.r-project.org/package=tidycensus) / [acs](https://cran.r-project.org/package=acs) / [censusapi](https://cran.r-project.org/package=censusapi): Packages for US Census Bureau Data.
 
+- [eechidna](https://cran.r-project.org/package=eechidna) (AUS census) / [pdfetch](https://cran.r-project.org/package=pdfetch) (UK ONS), and [idbr](https://cran.r-project.org/package=idbr): For international census data.
+
 ---
 
 # Spatial Data Operations
@@ -142,7 +146,7 @@ class: center, middle, inverse, title-slide
 
 --
 
-- base plotting: Very Powerful .gray[&lt;sup&gt;1&lt;/sup&gt;], but not intuitive (IMHO). Many viz. packages provide extensions on top of this.
+- base plotting: Very Powerful .gray[&lt;sup&gt;1&lt;/sup&gt;], but not intuitive (IMO). Many viz. packages provide extensions on top of this.
 
 --
 
@@ -186,7 +190,7 @@ class: center, middle, inverse, title-slide
 
 --
 
-- [rbokeh](https://cran.r-project.org/package=rbokeh) / [plotly](https://cran.r-project.org/package=plotly) /[highcharter](https://cran.r-project.org/package=highcharter): Solid interactive mapping packages based on different JavaScript libraries.
+- [rbokeh](https://cran.r-project.org/package=rbokeh) / [plotly](https://cran.r-project.org/package=plotly) / [highcharter](https://cran.r-project.org/package=highcharter): Solid interactive mapping packages based on different JavaScript libraries.
 
 ---
 
