--- a/presentations/03-Spatial_Data.html
+++ b/presentations/03-Spatial_Data.html
@@ -196,7 +196,7 @@ class(scot_BNG)
 
 --
 
-- Way more faster than `sp` and plays nicely with `tidyverse` packages.
+- Way faster than `sp` and plays nicely with `tidyverse` packages.
 
 --
 
@@ -217,6 +217,13 @@ class(scot_BNG)
 
 ```r
 library(sf)
+```
+
+```
+## Linking to GEOS 3.5.1, GDAL 2.1.3, proj.4 4.9.2, lwgeom 2.3.2 r15302
+```
+
+```r
 * scot_BNG &lt;- sf::st_read(system.file("vectors", package = "rgdal")[1], 'scot_BNG') 
 ```
 
