--- a/presentations/04-Spatial_Data_Operations.html
+++ b/presentations/04-Spatial_Data_Operations.html
@@ -128,6 +128,10 @@ as.data.frame(meuse_sf[1:2,c('lead', 'zinc', 'geometry')])
 
 --
 
+-- `st_coordinates(sf)`: Extract the X/Y coordinates.
+
+--
+
 - `st_geometry(sf)`: Just the geometry, the `sfc` column.
 
 --
@@ -237,7 +241,7 @@ class: inverse middle
 
 # Part 4: The End! 
 
-Continue to [Part 5: Ways to Output Maps](05-Ways_To_Output_Maps.html)
+Continue to [Part 5: Ways to Output Maps](05-Ways_to_Output_Maps.html)
 
 .footnote[Restart [Part 4: Spatial Data Operations](04-Spatial_Data_Operations.html)]
     </textarea>
