--- a/presentations/05-Ways_to_Output_Maps.html
+++ b/presentations/05-Ways_to_Output_Maps.html
@@ -29,7 +29,7 @@ class: center, middle, inverse, title-slide
 
 --
 
-- Save to a static image in one of the raster formats.&lt;br/&gt;&lt;br/&gt;`.jpg`/`.bmp` use lossy &amp; `.tiff`/`.png` use lossless compression. (TIFF are huge!)
+- Save to a static image in one of the raster formats.&lt;br/&gt;&lt;br/&gt;`.jpg` uses lossy &amp; `bmp`/`.tiff`/`.png` use lossless compression. (TIFF are huge!)
 
 --
 
@@ -211,7 +211,7 @@ knitr::opts_chunk$set(cache = TRUE)
 
 --
 
-- For rockstar status mapping you can combine `htmlwidgets` + `crosstalk` + `shiny`.
+- For wizzard level mapping you can combine `htmlwidgets` + `crosstalk` + `shiny`.
 
 
 
