Notebook for static visualization

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <meta name="author" content="Bhaskar V. Karambelkar" />
 
-<meta name="date" content="2017-07-03" />
+<meta name="date" content="2017-07-04" />
 
 <title>GeoSpatial Data Visualization in R</title>
 
@@ -32,13 +32,18 @@
 
 <h1 class="title toc-ignore">GeoSpatial Data Visualization in R</h1>
 <h4 class="author"><em>Bhaskar V. Karambelkar</em></h4>
-<h4 class="date"><em>2017-07-03</em></h4>
+<h4 class="date"><em>2017-07-04</em></h4>
 
 
 
 <div id="code-and-slides" class="section level4">
 <h4>Code and Slides</h4>
 <p>All the code and slides will be made available on my <a href="https://github.com/bhaskarvk/user2017.geodataviz">user2017.geodataviz</a> github repo before July 3<sup>rd</sup>, 2017.</p>
+<p>In addition to the slides, you can also consult the following R Notebooks for an alternative format. Source code for these notebooks is in the same repo as above under <code>inst/notebooks</code> directory</p>
+<ul>
+<li><a href="https://bhaskarvk.github.io/user2017.geodataviz/notebooks/01-Spatial_Data.nb.html">01-Spatial_Data.nb.html</a></li>
+<li><a href="https://bhaskarvk.github.io/user2017.geodataviz/notebooks/02-Static-Maps.nb.html">02-Static-Maps.nb.html</a></li>
+</ul>
 </div>
 <div id="pre-tutorial-setup" class="section level4">
 <h4>Pre-Tutorial Setup</h4>
