--- a/presentations/04-Spatial_Data_Operations.html
+++ b/presentations/04-Spatial_Data_Operations.html
@@ -48,14 +48,9 @@ print(meuse[9:10, c('lead','zinc')])
 ```
 
 ```
-## class       : SpatialPointsDataFrame 
-## features    : 2 
-## extent      : 181060, 181232, 333168, 333231  (xmin, xmax, ymin, ymax)
-## coord. ref. : +init=epsg:28992 +proj=sterea +lat_0=52.15616055555555 +lon_0=5.38763888888889 +k=0.9999079 +x_0=155000 +y_0=463000 +ellps=bessel +towgs84=565.4171,50.3319,465.5524,-0.398957388243134,0.343987817378283,-1.87740163998045,4.0725 +units=m +no_defs 
-## variables   : 2
-## names       : lead, zinc 
-## min values  :   80,  183 
-## max values  :  133,  347
+##         coordinates lead zinc
+## 9  (181060, 333231)  133  347
+## 10 (181232, 333168)   80  183
 ```
 
 ```r
