Better Documentation and Fixed #1

--- a/presentations/02-R_Packages.html
+++ b/presentations/02-R_Packages.html
@@ -102,6 +102,8 @@ class: center, middle, inverse, title-slide
 
 - [getlandsat](https://cran.r-project.org/package=getlandsat): A treasure trove of Landsat data.
 
+- [elevatr](https://cran.r-project.org/package=elevatr): Access evevation data via several web-services.
+
 --
 
 - [tigris](https://cran.r-project.org/package=tigris) / [tidycensus](https://cran.r-project.org/package=tidycensus) / [acs](https://cran.r-project.org/package=acs) / [censusapi](https://cran.r-project.org/package=censusapi): Packages for US Census Bureau Data.
