--- a/presentations/07-Interactive_Maps.html
+++ b/presentations/07-Interactive_Maps.html
@@ -85,9 +85,17 @@ ggplotly(p) %&gt;%
 )
 ```
 
---
+---
 
-- For some reason not working for me right now. So no output, Sorry! But feel free to try yourself.
+# `plotly` plot
+
+
+```
+## Setting the `off` event (i.e., 'plotly_doubleclick') to match the `on` event (i.e., 'plotly_hover'). You can change this default via the `highlight()` function.
+```
+
+<div id="htmlwidget-0c17d2d3a313eb2957d3" style="width:100%;height:576px;" class="widgetframe html-widget"></div>
+<script type="application/json" data-for="htmlwidget-0c17d2d3a313eb2957d3">{"x":{"url":"07-Interactive_Maps_files/widgets/widget_07-041.html","options":{"xdomain":"*","allowfullscreen":false}},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -114,8 +122,8 @@ suppressWarnings(figure(width = 800, height = 450, padding_factor = 0) %&gt;%
 
 # `rBokeh` plot
 
-<div id="htmlwidget-26c18139ecbf12ca2156" style="width:1024px;height:576px;" class="widgetframe html-widget"></div>
-<script type="application/json" data-for="htmlwidget-26c18139ecbf12ca2156">{"x":{"url":"07-Interactive_Maps_files/widgets/widget_07-06.html","options":{"xdomain":"*","allowfullscreen":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-eb2957d37b8be3a2b17f" style="width:1024px;height:576px;" class="widgetframe html-widget"></div>
+<script type="application/json" data-for="htmlwidget-eb2957d37b8be3a2b17f">{"x":{"url":"07-Interactive_Maps_files/widgets/widget_07-06.html","options":{"xdomain":"*","allowfullscreen":false}},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -160,8 +168,6 @@ hcmap("countries/au/au-all", data = data_fake, value = "value",
 
 - Extremely powerful and Extremely flexible.
 
---
-
 - Current State
 
   - `leaflet`: Developed and actively maintained by RStudio.
@@ -169,8 +175,6 @@ hcmap("countries/au/au-all", data = data_fake, value = "value",
   - `leaflet.extras`, `leaflet.esri`: Developed and maintained by yours truly. Provides additional plotting options using leaflet plugins.
   
   - `mapview`, `mapedit`: Developed and maintained by the good guys at [r-spatial](http://r-spatial.org/projects/). Allow interactive exploratory spatial analysis.
-
---
 
 - There is another unrelated project `leafletR` [CRAN Page](https://github.com/chgrl/leafletR), but really don't know much about it.
 
